syntax = "proto3";

package wart_worker;

import "wart-types.proto";

service WartWorker {
    rpc OpenSession(OpenSessionRequest) returns(OpenSessionResponse);
    rpc CloseSession(CloseSessionRequest) returns(CloseSessionResponse);
    rpc StreamingRun(stream StreamingRunRequest) returns(stream StreamingRunResponse);
    rpc UpdateStore(stream UpdateStoreRequest) returns(stream UpdateStoreResponse);
    rpc IncrementEpoch(IncrementEpochRequest) returns(IncrementEpochResponse);
}

message OpenSessionRequest {
    bytes program = 1;
    string space_name = 2;
    // uint32 io_timeout = 3;
    uint32 ex_timeout = 4;
    uint32 parallel = 5;
}

message OpenSessionResponse {
    message Ok {
        string token = 1;
    }

    message Err {
        string message = 1;
    }

    oneof result {
        Ok ok = 1;
        Err err = 2;
    }
}

message CloseSessionRequest {
    string token = 1;
}

message CloseSessionResponse {
}

message StreamingRunRequest {
    message Config {
        string token = 1;
    }

    message Args {
        repeated string args = 1;
    }

    oneof data {
        Config config = 1;
        Args args = 2;
    }
}

message StreamingRunResponse {
    repeated wart_types.DataFrame tables = 1;
    repeated string logs = 2;
    string last_err = 3;
    int64 sta_time = 4;
    int64 end_time = 5;
    int64 counter = 6;
}

message IncrementEpochRequest {
    string token = 1;
}

message IncrementEpochResponse {
    uint64 epoch = 1;
}

message UpdateStoreRequest {
    enum MergeType {
        DEL = 0;
        ADD = 1;
        MOV = 2;
    };
    string token = 1;
    wart_types.Series.StringSeries keys = 2;
    wart_types.Series vals = 3;
    MergeType merge_type = 4;
}

message UpdateStoreResponse {
    uint64 ok_count = 1;
}
